enhanced front end ui and enhanced agent logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
             <path d="M3 12L12 17L21 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M3 17L12 22L21 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
-          <h1>Shopify <span class="gradient-text">AI</span> Generator</h1>
+          <h1>Ellie <span class="gradient-text"></span> (E.L.I. – Ecommerce Listing Intelligence)</h1>
         </div>
         <p class="tagline">Transform products into compelling listings with AI</p>
       </header>
