--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,12 +30,13 @@
       </main>
 
       <footer class="app-footer animate__animated animate__fadeIn">
-        <p>Powered by AI • Shopify Automation</p>
+        <p>Powered by AI • Ellie (E.L.I. – Ecommerce Listing Intelligence)</p>
         <div class="footer-links">
           <a href="#">Privacy</a>
           <a href="#">Terms</a>
           <a href="#">Contact</a>
         </div>
+        <p>A small project by Balavanth</p>
       </footer>
     </div>
   </div>
